@@ -11,6 +11,7 @@ Log of changes:	tilp (cables, calcs, files, ticonv)
 	- reworked Device Infos dialog box
 	- bug to fix: with text msg_box: need to press a key before ENTER 
 	rather than pressing ENTER
+	- added support for the alternate (KDE/M$) button order (kevin)
 	=> to release soon...
 
 - 01/10/2007, version 1.09: (1.1.1, 1.0.9, 1.0.9, 1.0.5): roms
